Index.html file for Grade Generator

--- a/GradeGenerator/index.html
+++ b/GradeGenerator/index.html
@@ -14,10 +14,13 @@
         <form>
             <h1>Grade Generator</h1>
             <p>Lets Generate some grades!</p>
+            <!-- Creates an input for user to enter grade -->
             Mark: <input type="number" id ="grade"></br>
+            <!-- creates button to prompt the javascript code -->
             <input type="button" onClick="gradeGenerator()" value="Generate">
         
         </form>
+        <!-- Shows result -->
         <p>The Result is : <span id="result"></span>
         </p>
    </div>
