--- a/GradeGenerator/index.html
+++ b/GradeGenerator/index.html
@@ -15,7 +15,7 @@
             <h1>Grade Generator</h1>
             <p>Lets Generate some grades!</p>
             <!-- Creates an input for user to enter grade -->
-            Mark: <input type="number" id ="grade"></br>
+            Mark: <input type="number" id ="grade" required></br>
             <!-- creates button to prompt the javascript code -->
             <input type="button" onClick="gradeGenerator()" value="Generate">
         
