--- a/NetSalaryCalc/index.html
+++ b/NetSalaryCalc/index.html
@@ -12,8 +12,8 @@
     <form>
     <h1>Net Salary Calculator</h1>
         <p>What is your Net salary?</p>
-        Basic: <input type="number" id ="basic"></br>
-        Benefits: <input type="number" id ="benefits"></input></br>
+        Basic: <input type="number" id ="basic" required></br>
+        Benefits: <input type="number" id ="benefits" required></input></br>
         <input type="button" onClick="main" value="Calculate">
          <p>Your Payee tax is : <span id="payee"></span></p>
          <p>Your NHIF deduction is : <span id="nhif"></span></p>
