--- a/SpeedDetector/index.html
+++ b/SpeedDetector/index.html
@@ -14,7 +14,7 @@
     <h1>Speed Detector</h1>
         <p>How fast are you going?</p>
         <!-- creates an input field for the user to add input -->
-        Speed: <input type="number" id ="speed"></br>
+        Speed: <input type="number" id ="speed" required></br>
         <!-- adds button that prompts the javascript implementation -->
         <input type="button" onClick="speedDetector()" value="Detect">
     </form>
